src/kubernetes/cluster/node-info/node-info.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cas.cluster.node-info.rest-api
  labels:
    app: node-info
    project: carbon-aware-scheduler
    component: cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-info
      project: carbon-aware-scheduler
      component: cluster
  template:
    metadata:
      labels:
        app: node-info
        project: carbon-aware-scheduler
        component: cluster
    spec:
      containers:
      - name: cas-cluster-node-info
        image: gitlab-registry.nrp-nautilus.io/c3lab/carbon-aware-scheduler/cluster.node-info.rest-api:0.1
        imagePullPolicy: Always
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
          requests:
            memory: 128Mi
            cpu: 100m
      imagePullSecrets:
        - name: regcred
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: topology.kubernetes.io/region
      #               operator: In
      #               values:
      #                 - "us-west"
