src/kubernetes/cluster/node-info/node-info.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cas-node-info-ingress
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: cas-node-info.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cas-node-info
            port:
              number: 80
  tls:
  - hosts:
    - cas-node-info.nrp-nautilus.io
